<resources>

    <string name="app_name">TaskitClient</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">Taskit</string>
    <string name="title_activity_task">Task List</string>
    <string name="title_activity_new_task">New Task</string>
    <string name="tab_current">Current</string>
    <string name="tab_history">History</string>
    <string name="tab_setting">Settings</string>
    <string name="login_text">Welcome to Taskit!</string>
    <string name="select_account">Select a Google Account</string>
    <string name="enter_facebook_account">Facebook Integration (Coming Soon)</string>
    <string name="login_button">Login</string>
    <string name="exit_button">Exit</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_text">Add New Task</string>
    <string name="name_text">Name:</string>
    <string name="desc_text">Task Description:</string>
    <string name="loc_text">Location:</string>
    <string name="date_button">Set Date</string>
    <string name="time_button">Set Time</string>
    <string name="priority_button">Set Task Priority</string>
    <string name="add_task_button">Add Task</string>
    <string name="image_desc">Priority</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_update_task">UpdateTaskActivity</string>
    <string name="update_text">Update Task</string>
    <string name="update_task_button">Update</string>

</resources>