<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/add_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/add_text"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/name_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="3" >

        <TextView
            android:id="@+id/name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name_text"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:background="@drawable/button_background"
            android:ems="10"
            android:gravity="center"
            android:inputType="text"
            android:textColor="#FFFFFF" >
        </EditText>
    </LinearLayout>

    <TextView
        android:id="@+id/desc_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:text="@string/desc_text"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:ems="10"
        android:inputType="text"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:id="@+id/location_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="3" >

        <TextView
            android:id="@+id/loc_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/loc_text"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:background="@drawable/button_background"
            android:ems="10"
            android:gravity="center"
            android:inputType="text"
            android:textColor="#FFFFFF" >
        </EditText>
        
    </LinearLayout>

    <LinearLayout 
        android:id="@+id/date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        
        <Button
            android:id="@+id/date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/date_button"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
        
        <Button
            android:id="@+id/time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/time_button"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
        
    </LinearLayout>

    <Button
        android:id="@+id/priority_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/button_background"
        android:text="@string/priority_button"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/cancel_button"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <Button
            android:id="@+id/add_task_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/add_task_button"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>